# live_translation

./: .env.template  .gitignore  README.md  azure_translation.py  main.py  pyproject.toml  user_config_helper.py
client/: README.md  build.py  firebase_config.json
client/static/: style.css
client/templates/: index.html
server/: README.md  server.js
static/: style.css  style_mobile.css  style_tv.css
templates/: index.html  mobile.html  tv.html
