[project]
name = "live-translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-speech>=1.42.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "ruff>=0.9.6",
    "requests>=2.32.3",
    "python-socketio[client]>=5.12.1",
    "firebase-admin>=6.6.0",
]
